--- a/css/main.css
+++ b/css/main.css
@@ -10,19 +10,24 @@ form label, form input {
     margin-bottom: 16px;
 }
 
-#guess-state {
+#game-state p:nth-of-type(1) {
     font-size: 48px;
     letter-spacing: 24px;
 }
 
-#uncontained-letters {
+#game-state p:nth-of-type(2) {
     font-size: 24px;
 }
 
-#uncontained-letters span {
+#uncontained-letters {
     letter-spacing: 12px;
 }
 
-#tries-left {
+#game-state p:nth-of-type(3) {
     font-size: 18px;
+}
+
+#game-state p:nth-of-type(4) {
+    font-size: 24px;
+    margin-top: 48px;
 }
