--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 article {
     display: grid;
-    grid-template-columns: 30% 30%;
+    max-width: 1000px;
+    grid-template-columns: 50% 50%;
     grid-template-rows: auto;
 }
 
