--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+
 article {
     display: grid;
     max-width: 1000px;
@@ -12,6 +13,7 @@ form label, form input {
 }
 
 #game-state p:nth-of-type(1) {
+    font-family: 'Courier New', Courier, monospace;
     font-size: 48px;
     letter-spacing: 24px;
 }
@@ -22,6 +24,7 @@ form label, form input {
 
 #uncontained-letters {
     letter-spacing: 12px;
+    margin-left: 12px;
 }
 
 #game-state p:nth-of-type(3) {
